[package]
name = "bevy-steamworks"
version = "0.3.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"
description = "A Bevy plugin for integrating with the Steamworks SDK."
repository = "https://github.com/james7132/bevy-steamworks"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "steam"]

[package.metadata.docs.rs]
features = [ "docs-only" ]

[features]
default = []
# Skip looking for the steamworks sdk for docs builds
docs-only = ["steamworks/docs-only"]

[dependencies]
bevy_log = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
steamworks = { git = "https://github.com/Noxime/steamworks-rs" }
parking_lot = "0.12"

[dev-dependencies]
bevy = "0.6"